# pypim

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.rst  index.html  pyproject.toml  setup.py  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci_cd.yml
doc/: Makefile
doc/source/: conf.py  contributing.rst  index.rst  integration.rst  integration_guide.rst
doc/source/api/: index.rst
doc/styles/Vocab/ANSYS/: accept.txt
proto/: README.md
protos/: README.rst
requirements/: requirements_doc.txt  requirements_tests.txt
src/ansys/platform/instancemanagement/: __init__.py  client.py  configuration.py  definition.py  exceptions.py  grpc_transport_settings.py  instance.py  interceptor.py  service.py
tests/: conftest.py  test_client.py  test_client_definitions.py  test_configuration.py  test_definition.py  test_instance.py  test_interceptor.py  test_metadata.py  test_service.py
version/: index.html
version/1.1/: CNAME  contributing.html  genindex.html  index.html  integration.html  objects.inv  py-modindex.html  searchindex.js
version/1.1/_sources/api/: index.rst.txt
version/1.1/api/_autosummary/: ansys.platform.instancemanagement.Client.close.html  ansys.platform.instancemanagement.Client.create_instance.html  ansys.platform.instancemanagement.Client.get_instance.html  ansys.platform.instancemanagement.Client.html  ansys.platform.instancemanagement.Client.list_instances.html  ansys.platform.instancemanagement.Definition.available_service_names.html  ansys.platform.instancemanagement.Definition.html  ansys.platform.instancemanagement.Definition.name.html  ansys.platform.instancemanagement.Definition.product_name.html  ansys.platform.instancemanagement.Definition.product_version.html  ansys.platform.instancemanagement.Instance.build_grpc_channel.html  ansys.platform.instancemanagement.Instance.definition_name.html  ansys.platform.instancemanagement.Instance.delete.html  ansys.platform.instancemanagement.Instance.html  ansys.platform.instancemanagement.Instance.name.html  ansys.platform.instancemanagement.Instance.ready.html  ansys.platform.instancemanagement.Instance.services.html  ansys.platform.instancemanagement.Instance.wait_for_ready.html  ansys.platform.instancemanagement.InstanceNotReadyError.html  ansys.platform.instancemanagement.InvalidConfigurationError.html  ansys.platform.instancemanagement.NotConfiguredError.html  ansys.platform.instancemanagement.Service.headers.html  ansys.platform.instancemanagement.Service.html  ansys.platform.instancemanagement.Service.uri.html  ansys.platform.instancemanagement.UnsupportedProductError.html  ansys.platform.instancemanagement.UnsupportedServiceError.html
version/dev/: .buildinfo  contributing.html  genindex.html  index.html  integration.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/: contributing.rst.txt  index.rst.txt  integration.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/api/_autosummary/: ansys.platform.instancemanagement.Client.close.html  ansys.platform.instancemanagement.Client.create_instance.html  ansys.platform.instancemanagement.Client.get_instance.html  ansys.platform.instancemanagement.Client.html  ansys.platform.instancemanagement.Client.list_definitions.html  ansys.platform.instancemanagement.Client.list_instances.html  ansys.platform.instancemanagement.Definition.available_service_names.html  ansys.platform.instancemanagement.Definition.create_instance.html  ansys.platform.instancemanagement.Definition.html  ansys.platform.instancemanagement.Definition.name.html  ansys.platform.instancemanagement.Definition.product_name.html  ansys.platform.instancemanagement.Definition.product_version.html  ansys.platform.instancemanagement.Instance.build_grpc_channel.html  ansys.platform.instancemanagement.Instance.definition_name.html  ansys.platform.instancemanagement.Instance.delete.html  ansys.platform.instancemanagement.Instance.html  ansys.platform.instancemanagement.Instance.name.html  ansys.platform.instancemanagement.Instance.ready.html  ansys.platform.instancemanagement.Instance.services.html  ansys.platform.instancemanagement.Instance.status_message.html  ansys.platform.instancemanagement.Instance.update.html  ansys.platform.instancemanagement.Instance.wait_for_ready.html  ansys.platform.instancemanagement.InstanceNotReadyError.html  ansys.platform.instancemanagement.InvalidConfigurationError.html  ansys.platform.instancemanagement.NotConfiguredError.html  ansys.platform.instancemanagement.Service.headers.html  ansys.platform.instancemanagement.Service.html  ansys.platform.instancemanagement.Service.uri.html  ansys.platform.instancemanagement.UnsupportedProductError.html  ansys.platform.instancemanagement.UnsupportedServiceError.html
version/stable/: .buildinfo  genindex.html  index.html  integration.html  search.html
version/stable/_sources/: contributing.rst.txt
version/stable/api/: index.html
version/stable/api/_autosummary/: ansys.platform.instancemanagement.Client.create_instance.html  ansys.platform.instancemanagement.Client.get_instance.html  ansys.platform.instancemanagement.Client.list_definitions.html  ansys.platform.instancemanagement.Definition.available_service_names.html  ansys.platform.instancemanagement.Definition.create_instance.html  ansys.platform.instancemanagement.Definition.html  ansys.platform.instancemanagement.Definition.name.html  ansys.platform.instancemanagement.Instance.build_grpc_channel.html  ansys.platform.instancemanagement.Instance.definition_name.html  ansys.platform.instancemanagement.Instance.ready.html  ansys.platform.instancemanagement.Instance.services.html  ansys.platform.instancemanagement.Instance.status_message.html  ansys.platform.instancemanagement.Instance.update.html  ansys.platform.instancemanagement.InstanceNotReadyError.html  ansys.platform.instancemanagement.InvalidConfigurationError.html  ansys.platform.instancemanagement.Service.headers.html  (+3 more)
(+32 files in other folders)
