[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-platform-instancemanagement"
version = "1.2.dev0"
description = "A Python wrapper for Ansys platform instancemanagement"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "importlib-metadata >=4.0",
    "ansys-api-platform-instancemanagement~=1.0",
]

[project.optional-dependencies]
tests = [
    "ansys-api-platform-instancemanagement==1.1.2",
    "grpcio-health-checking==1.69.0",
    "grpcio-testing",
    "six~=1.16",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]
doc = [
    "ansys-api-platform-instancemanagement==1.1.2",
    "ansys-sphinx-theme==1.2.6",
    "numpydoc==1.8.0",
    "Sphinx==8.2.1",
    "sphinx-copybutton==0.5.2",
]

[tool.flit.module]
name = "ansys.platform.instancemanagement"

[project.urls]
Source = "https://github.com/ansys/pypim"
Issues = "https://github.com/ansys/pypim/issues"
Discussions = "https://github.com/ansys/pypim/discussions"
Documentation = "https://pypim.docs.pyansys.com/"
Releases = "https://github.com/ansys/pypim/releases"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
src_paths = ["src", "tests", "doc"]
force_sort_within_sections = "true"
line_length = 100
default_section = "THIRDPARTY"

[tool.coverage.run]
source = ["ansys.platform.instancemanagement"]

[tool.coverage.report]
show_missing = true
