[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-platform-instancemanagement"
version = "1.2.dev0"
description = "A Python wrapper for Ansys platform instancemanagement"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "importlib-metadata >=4.0",
    "ansys-api-platform-instancemanagement~=1.0"
]

[project.optional-dependencies]
tests = [
    "ansys-api-platform-instancemanagement==1.1.3",
    "grpcio-health-checking==1.78.0",
    "grpcio-testing",
    "six~=1.16",
    "pytest==9.0.3",
    "pytest-cov==7.1.0"
]
doc = [
    "ansys-api-platform-instancemanagement==1.1.3",
    "ansys-sphinx-theme==1.8.2",
    "numpydoc==1.10.0",
    "Sphinx==9.1.0",
    "sphinx-copybutton==0.5.2"
]

[tool.flit.module]
name = "ansys.platform.instancemanagement"

[project.urls]
Source = "https://github.com/ansys/pypim"
Issues = "https://github.com/ansys/pypim/issues"
Discussions = "https://github.com/ansys/pypim/discussions"
Documentation = "https://pypim.docs.pyansys.com/"
Releases = "https://github.com/ansys/pypim/releases"

[tool.coverage.run]
source = ["ansys.platform.instancemanagement"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = [
    "--cov=ansys.platform.instancemanagement",
    "--cov-report=term-missing",
    "--cov-report=html:.cov/html",
    "--cov-report=xml:.cov/xml",
    "-v",
]

[tool.codespell]
ignore-multiline-regex= "default_section = .*"

[tool.ruff]
line-length = 100
fix = true
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = true
lint.select = [
  "D",   # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
  "E",   # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
  "F",   # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
  "I",   # isort, see https://beta.ruff.rs/docs/rules/#isort-i
  "N",   # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
  "PTH", # flake8-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
]
lint.ignore = []
lint.per-file-ignores = { "tests/*.py" = ["D100", "D103", "N802"] }
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "ansys" ]
# Settings: https://docs.astral.sh/ruff/settings/#lintpydocstyle
lint.pydocstyle.convention = "numpy"